# Brownian_motion

./: CMakeLists.txt  README.md  platform.cmake
src/: CMakeLists.txt  force.hpp  friction_kernel.cpp  integrator.hpp  main.cpp  options.hpp  particle.hpp
src/integrators/: euler.hpp  integrator_base.hpp  omlyan_BA5B.hpp  runge_kutta.hpp
src/potentials/: double_well.hpp  free_diffusion.hpp  omlyan_BA5B.hpp  random_test  random_test.cpp
